--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ repo_url: https://github.com/luutuananh/xpenology
 plugins:
   - git-revision-date-localized:
       enable_creation_date: true
+      type: timeago
 nav:
   - 'index.md'
   - 'caidat.md'
