--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ theme:
 repo_url: https://github.com/luutuananh/xpenology
 plugins:
   - git-revision-date-localized:
-      enable_creation_date: true
+      enable_creation_date: false
       type: timeago
 nav:
   - 'index.md'
