--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,9 +7,9 @@ theme:
 repo_url: https://github.com/luutuananh/xpenology
 plugins:
   - git-revision-date-localized:
-      enabled: !ENV [CI, false]
-      enable_creation_date: true
+      enable_creation_date: false
       type: timeago
+      locale: vi
 nav:
   - 'index.md'
   - 'caidat.md'
