--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,8 @@
 site_name: Hướng dẫn Xpenology toàn tập
 theme:
   name: material
-  font: Inconsolata
+  font: 
+    text: Inconsolata
   language: vi
   palette:
     scheme: slate
