--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ extra:
   - icon: fontawesome/brands/facebook 
     link: https://facebook.com/
     name: Nhóm facebook Xpenology trên Facebook
+copyright: Copyright &copy; 2023 luutuananh
 nav:
   - 'index.md'
   - 'caidat.md'
