--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,10 @@ extra:
   - icon: fontawesome/brands/facebook 
     link: https://facebook.com/
     name: Nhóm facebook Xpenology trên Facebook
+  analytics:
+    provider: google
+    property: G-3V619Y0V5M
+
 copyright: Copyright &copy; 2023 luutuananh
 nav:
   - 'index.md'
